# s3ranger

./: CHANGELOG.md  README.md  main.py  pyproject.toml
docs/: delete_modal.md  download_modal.html  download_modal.md  main_screen.md  move_modal.md  ui.html  upload_modal.md
mockups/: delete_modal.html  upload_modal.html
src/s3ranger/: __init__.py  config.py  credentials.py  main.py
src/s3ranger/gateways/: s3.py
src/s3ranger/ui/: app.py  app.tcss  constants.py
src/s3ranger/ui/modals/: __init__.py  download_modal.py  multi_download_modal.py
src/s3ranger/ui/widgets/: bucket_list.py  object_list.py
src/s3tui/: __init__.py  config.py  main.py
src/s3tui/gateways/: s3.py
src/s3tui/services/: s3_list.py
src/s3tui/ui/: app.py  app.tcss  constants.py  utils.py
src/s3tui/ui/modals/: __init__.py  delete_modal.py  download_modal.py  help_modal.py  rename_modal.py  upload_modal.py
src/s3tui/ui/screens/: main_screen.py
src/s3tui/ui/widgets/: __init__.py  bucket_list.py  object_list.py  path_bar.py  progress_widget.py  title_bar.py
