[project]
name = "s3tui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "awscli>=1.41.9",
    "boto3>=1.39.9",
    "textual>=4.0.0",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=9.4.0",
    "textual-dev>=1.7.0",
]
