[project]
name = "s3tui"
version = "0.1.0"
description = "A terminal-based user interface for browsing and managing AWS S3 buckets and objects"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Sharashchandra", email = "sharashchandra1998@gmail.com"}
]
license = {file = "LICENSE"}
keywords = ["s3", "aws", "terminal", "tui", "cloud", "storage"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "awscli>=1.41.9",
    "boto3>=1.39.9",
    "click>=8.0.0",
    "textual>=4.0.0",
    "textual-fspicker>=0.4.1",
    "toml>=0.10.2",
]

[project.urls]
Homepage = "https://github.com/Sharashchandra/s3tui"
Repository = "https://github.com/Sharashchandra/s3tui"
Issues = "https://github.com/Sharashchandra/s3tui/issues"

[project.scripts]
s3tui = "s3tui.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=9.4.0",
    "ruff>=0.12.7",
    "textual-dev>=1.7.0",
]
